# J.A.R.V.I.S

./: .bandit.yaml  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README.ru.md  README.uz.md  ROADMAP.md  SECURITY.md  VISION.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  desktop-build.yml
clients/android/: README.md  buildozer.spec  jarvis_client.py  main.py
clients/android-kotlin/: README.md  build.gradle.kts
deploy/: redeploy.sh
deploy/desktop/: installer.iss  jarvis-desktop.spec
deploy/systemd/: jarvis-api.service  jarvis-bot.service
docs/: ARCHITECTURE.md  CHEATSHEET.md  CLIENTS.md  DEPLOY.md  MCP.md  RELEASE_NOTES_v1.7.0.md  RELEASE_NOTES_v1.8.0.md  RELEASE_NOTES_v1.9.0.md  RELEASE_NOTES_v1.9.1.md  RELEASE_NOTES_v1.9.2.md  RELEASE_NOTES_v1.9.3.md  RELEASE_NOTES_v1.9.4.md  SECURITY_AUDIT.md
jarvis/: __init__.py  __main__.py
jarvis/agents/: __init__.py  agent.py  tools.py
jarvis/api/: __init__.py  __main__.py  app.py  auth.py  billing_routes.py
jarvis/billing/: __init__.py  plans.py  service.py
jarvis/coding/: __init__.py  runner.py  tools.py
jarvis/config/: __init__.py  constants.py  manager.py  settings.py
jarvis/core/: __init__.py  capabilities.py  container.py  context.py  diagnostics.py  engine.py  llm.py  pipeline.py  ratelimit.py  runtime.py  session.py  state.py  updater.py
jarvis/desktop/: __init__.py  controller.py  tools.py
jarvis/desktop_app/: __init__.py  __main__.py  api_client.py  app.py  autostart.py  config.py  engine_thread.py  strings.py  theme.py  voice_controller.py
jarvis/events/: __init__.py  bus.py  events.py
jarvis/files/: __init__.py  documents.py  manager.py  tools.py
jarvis/goals/: __init__.py  manager.py  models.py  store.py  tools.py
jarvis/i18n/: __init__.py  catalog.py
jarvis/integrations/: __init__.py  base.py  homeassistant.py  http.py  manager.py  telegram_channel.py  tool_adapter.py  weather.py
jarvis/interfaces/: __init__.py  admin_panel.py  usage.py  (+11 more)
scripts/: gen_plan_banner.py  security_scan.sh  sync_env.py
tests/: __init__.py  conftest.py  test_admin_panel.py  test_agents.py  test_ai_manager.py  test_api.py  test_api_auth.py  test_api_models_prefs.py  test_automations.py  test_autostart.py  test_billing.py  test_bot_extras.py  test_bot_menu.py  test_byok.py  test_capabilities.py  test_coding.py  test_config_manager.py  test_core_internals.py  test_dashboard_data.py  test_desktop.py  test_desktop_app.py  test_desktop_roles.py  test_desktop_theme.py  test_diagnostics.py  test_documents.py  test_engine.py  test_events.py  test_files.py  test_goals.py  test_i18n.py  test_image_service.py  test_integrations.py  test_licensing.py  test_link_and_admin.py  test_llm.py  test_local_api.py  test_market_screens.py  test_mcp.py  test_memory.py  test_model_catalog.py  (+27 more)
(+80 files in other folders)
