[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-assistant"
version = "0.1.0"
description = "J.A.R.V.I.S. — Just A Rather Very Intelligent System. A modular personal AI assistant framework."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "nomadnairi" }]
keywords = ["ai", "assistant", "llm", "voice", "automation", "jarvis"]

dependencies = [
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "python-dotenv>=1.0,<2.0",
    "rich>=13.7,<14.0",
    "anthropic>=0.39,<1.0",
    "openai>=1.30,<2.0",
]

[project.urls]
Homepage = "https://github.com/nomadnairi/J.A.R.V.I.S"
Repository = "https://github.com/nomadnairi/J.A.R.V.I.S"
Issues = "https://github.com/nomadnairi/J.A.R.V.I.S/issues"

[project.scripts]
jarvis = "jarvis.__main__:main"

[tool.setuptools.packages.find]
include = ["jarvis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
