[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-assistant"
version = "0.1.0"
description = "J.A.R.V.I.S. — Just A Rather Very Intelligent System. A modular personal AI assistant framework."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "nomadnairi" }]
keywords = ["ai", "assistant", "llm", "voice", "automation", "jarvis"]

dependencies = [
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "python-dotenv>=1.0,<2.0",
    "rich>=13.7,<14.0",
    "anthropic>=0.39,<1.0",
    "openai>=1.30,<2.0",
]

[project.urls]
Homepage = "https://github.com/nomadnairi/J.A.R.V.I.S"
Repository = "https://github.com/nomadnairi/J.A.R.V.I.S"
Issues = "https://github.com/nomadnairi/J.A.R.V.I.S/issues"

[project.scripts]
jarvis = "jarvis.__main__:main"
jarvis-bot = "jarvis.interfaces.telegram_bot:main"

[project.optional-dependencies]
telegram = ["aiogram>=3.0,<4.0"]
local-embeddings = ["fastembed>=0.3"]
chroma = ["chromadb>=0.5,<1.0"]
# Voice — OpenAI backends need only the base 'openai' dep. Free/offline extras:
voice-local = ["openai-whisper"]   # local Whisper STT (github.com/openai/whisper)
voice-edge = ["edge-tts>=6.1"]     # free multilingual TTS
voice-gtts = ["gTTS>=2.5"]         # free TTS
desktop = ["pyautogui>=0.9"]       # desktop control (keyboard/mouse/screenshot)

[tool.setuptools.packages.find]
include = ["jarvis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
# Advisory: run via `make typecheck`. Not a hard gate — the tree is large and
# uses dynamic tool signatures.
check_untyped_defs = false
